@@ -32,6 +32,7 @@
      <ant dir="index-anchor" target="deploy"/>
      <ant dir="index-more" target="deploy"/>
      <ant dir="index-static" target="deploy"/>
+     <ant dir="index-metadata" target="deploy"/>
      <ant dir="language-identifier" target="deploy"/>
      <ant dir="lib-http" target="deploy"/>
      <ant dir="lib-nekohtml" target="deploy"/>
@@ -103,6 +104,7 @@
     <ant dir="index-anchor" target="clean"/>
     <ant dir="index-more" target="clean"/>
     <ant dir="index-static" target="clean"/>
+    <ant dir="index-metadata" target="clean"/>
     <ant dir="language-identifier" target="clean"/>
     <ant dir="lib-commons-httpclient" target="clean"/>
     <ant dir="lib-http" target="clean"/>
