@@ -1,5 +1,7 @@
 Nutch Change Log
 
+* NUTCH-1264 Configurable indexing plugin index-metadata (jnioche)
+
 * NUTCH-1242 Allow disabling of URL Filters in ParseSegment (Edward Drapkin via markus)
 
 * NUTCH-1256 WebGraph to dump host + score (markus)
